crates/vvv-tui/src/snapshots/vvv_tui__tests__snapshot_search_detailed.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────── Query · search ┐
│> Language                                                                              │
└ workspace · all results ───────────────────────────────────────────────────────────────┘
┌ Files ────────────────────── 1/3 · 4 hits ┐┌ source · src/lang/mod.rs:64 ──── 59–70/70 ┐
│> src/lang/mod.rs                        1 ││   59 │ // line 59                         │
│  src/lang/registry.rs                   1 ││   60 │ // line 60                         │
│  src/lib.rs                             2 ││   61 │ // line 61                         │
│                                           ││   62 │ // line 62                         │
├ Matches ───────────────────────────── 1/1 ┤│   63 │ // line 63                         │
│> 64  pub trait Language: Send + Sync {    ││   64 │ pub trait Language: Send + Sync {  │
│                                           ││   65 │     fn name(&self) -> &str;        │
│                                           ││   66 │     fn extensions(&self) -> &[&str…│
│                                           ││   67 │ }                                  │
│                                           ││   68 │ // line 68                         │
│                                           ││   69 │ // line 69                         │
│                                           ││   70 │ // line 70                         │
│                                           ││                                           │
│                                           ││                                           │
└ [All 4] Decl 1 Imp 2 Use 1 ───────────────┘└───────────────────────────────────────────┘
 search j/k move  ⏎ references  ctrl+g filters  ctrl+o places  F files  / query   f1 help
