crates/vvv-tui/src/snapshots/vvv_tui__tests__source_find_input.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(120, 30)"
---
┌ vvv ~/dev/nx ──────────────────────────────────────────────────────────────────────────────────────── Query · search ┐
│> Language                                                                                                            │
└ workspace · all results ─────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Files ───────────────────────────────────── 1/3 · 4 hits ┐┌ source · src/lang/mod.rs:64 ─────────────────── 65–70/70 ┐
│> src/lang/mod.rs                                       1 ││   65 │     fn name(&self) -> &str;                       │
│  src/lang/registry.rs                                  1 ││   66 │     fn extensions(&self) -> &[&str];              │
│  src/lib.rs                                            2 ││   67 │ }                                                 │
│                                                          ││   68 │ // line 68                                        │
├ Matches ──────────────────────────────────────────── 1/1 ┤│   69 │ // line 69                                        │
│> 64  pub trait Language: Send + Sync {                   ││   70 │ // line 70                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          │└ /fn▏ · 1/2 ──────────────────────────────────────────────┘
│                                                          │┌ definition · src/lang/mod.rs:64 ────────────────── 64–67 ┐
│                                                          ││ pub trait Language: Send + Sync {                        │
│                                                          ││     fn name(&self) -> &str;                              │
│                                                          ││     fn extensions(&self) -> &[&str];                     │
│                                                          ││ }                                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ [All 4] Declaration 1 Imports 2 Use 1 ───────────────────┘└──────────────────────────────────────────────────────────┘
 search ⏎ accept  esc cancel  ctrl+u clear  ctrl+g filters  ctrl+o places  ctrl+r refresh  tab panes            f1 help
