crates/vvv-tui/src/snapshots/vvv_tui__tests__source_horizontal.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render()"
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────── Query · search ┐
│> Language                                                                              │
└ workspace · all results ───────────────────────────────────────────────────────────────┘
┌ Files ────────────────────── 1/3 · 4 hits ┐┌ source · src/lang/mod.rs:64 ──── 59–70/70 ┐
│> src/lang/mod.rs                        1 ││   59 │‹59                                 │
│  src/lang/registry.rs                   1 ││   60 │‹60                                 │
│  src/lib.rs                             2 ││   61 │‹61                                 │
│                                           ││   62 │‹62                                 │
├ Matches ───────────────────────────── 1/1 ┤│   63 │‹63                                 │
│> 64  pub trait Language: Send + Sync {    ││   64 │‹t Language: Send + Sync {          │
│                                           ││   65 │‹ame(&self) -> &str;                │
│                                           ││   66 │‹xtensions(&self) -> &[&str];       │
│                                           ││   67 │‹                                   │
│                                           ││   68 │‹68                                 │
│                                           ││   69 │‹69                                 │
│                                           ││   70 │‹70                                 │
│                                           ││                                           │
│                                           ││                                           │
└ [All 4] Decl 1 Imp 2 Use 1 ───────────────┘└ col 9 ────────────────────────────────────┘
 search j/k scroll  d/u page  ⏎ follow  / find  : line  n hit  → columns          f1 help
