crates/vvv-tui/src/snapshots/vvv_tui__tests__source_preview_pending.snap
---
source: crates/vvv-tui/src/tests.rs
expression: pending
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────────────────────────────────── 1 query · search ┐
│> Engine▏                                                                                                             │
└ ctrl+f in: workspace  ·  ctrl+s kind: any  ·  ctrl+l lang: any ──────────────────────────────────────────────────────┘
┌ 2 Files ─────────────────────────────────── 2/3 · 3 hits ┐┌ source · a.rs:21 ────────────────────────────────────────┐
│  a.rs                                                  1 ││   19 │ // line 19                                        │
│> b.rs                                                  1 ││   20 │ // line 20                                        │
│  c.rs                                                  1 ││   21 │ Engine::from_a()                                  │
│                                                          ││   22 │ // line 22                                        │
├ 3 Matches · j/k ──────────────────────────────────── 1/1 ┤│   23 │ // line 23                                        │
│> 26  Engine::from_b()                                    ││   24 │ // line 24                                        │
│                                                          ││   25 │ // line 25                                        │
│                                                          ││   26 │ // line 26                                        │
│                                                          ││   27 │ // line 27                                        │
│                                                          ││   28 │ // line 28                                        │
│                                                          ││   29 │ // line 29                                        │
│                                                          ││   30 │ // line 30                                        │
│                                                          ││   31 │ // line 31                                        │
│                                                          │└ updating ────────────────────────────────────────────────┘
│                                                          │┌ definition ──────────────────────────────────────────────┐
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ [All 3] Declarations 0 Imports 0 Uses 3 ─────────────────┘└ updating ────────────────────────────────────────────────┘
 search ↓ results  ctrl+n ctrl+p files
