crates/vvv-tui/src/snapshots/vvv_tui__tests__source_preview_ready.snap
---
source: crates/vvv-tui/src/tests.rs
expression: ready
---
┌ vvv ~/dev/nx ──────────────────────────────────────────────────────────────────────────────────────── Query · search ┐
│> Engine                                                                                                              │
└ workspace · all results ─────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Files ───────────────────────────────────── 3/3 · 3 hits ┐┌ source · c.rs:36 ────────────────────────────── 31–43/60 ┐
│  a.rs                                                  1 ││   31 │ // line 31                                        │
│  b.rs                                                  1 ││   32 │ // line 32                                        │
│> c.rs                                                  1 ││   33 │ // line 33                                        │
│                                                          ││   34 │ // line 34                                        │
├ Matches ──────────────────────────────────────────── 1/1 ┤│   35 │ // line 35                                        │
│> 36  Engine::from_c()                                    ││   36 │ Engine::from_c()                                  │
│                                                          ││   37 │ // line 37                                        │
│                                                          ││   38 │ // line 38                                        │
│                                                          ││   39 │ // line 39                                        │
│                                                          ││   40 │ // line 40                                        │
│                                                          ││   41 │ // line 41                                        │
│                                                          ││   42 │ // line 42                                        │
│                                                          ││   43 │ // line 43                                        │
│                                                          │└──────────────────────────────────────────────────────────┘
│                                                          │┌ definition ──────────────────────────────────────────────┐
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ [All 3] Declarations 0 Imports 0 Uses 3 ─────────────────┘└ updating ────────────────────────────────────────────────┘
 search j/k scroll  d/u page  ⏎ follow  / find  : line  n hit  → columns  z expand  p preview  esc results      f1 help
