crates/vvv-tui/src/snapshots/vvv_tui__tests__source_refresh_needed.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(120, 30)"
---
┌ vvv ~/dev/nx ────────────────────────────────────────────────────────────────────── 1 query · stale · ctrl+r refresh ┐
│> Language▏                                                                                                           │
└ ctrl+f in: workspace  ·  ctrl+s kind: any  ·  ctrl+l lang: any ──────────────────────────────────────────────────────┘
┌ 2 Files ─────────────────────────────────── 1/3 · 4 hits ┐┌ source · src/lang/mod.rs:64 ─────────────────────────────┐
│> src/lang/mod.rs                                       1 ││   59 │ // line 59                                        │
│  src/lang/registry.rs                                  1 ││   60 │ // line 60                                        │
│  src/lib.rs                                            2 ││   61 │ // line 61                                        │
│                                                          ││   62 │ // line 62                                        │
├ 3 Matches · j/k ──────────────────────────────────── 1/1 ┤│   63 │ // line 63                                        │
│> 64  pub trait Language: Send + Sync {                   ││   64 │ pub trait Language: Send + Sync {                 │
│                                                          ││   65 │     fn name(&self) -> &str;                       │
│                                                          ││   66 │     fn extensions(&self) -> &[&str];              │
│                                                          ││   67 │ }                                                 │
│                                                          ││   68 │ // line 68                                        │
│                                                          ││   69 │ // line 69                                        │
│                                                          ││   70 │ // line 70                                        │
│                                                          ││                                                          │
│                                                          │└ stale · ctrl+r refresh ──────────────────────────────────┘
│                                                          │┌ definition · src/lang/mod.rs:64 ─────────────────────────┐
│                                                          ││ pub trait Language: Send + Sync {                        │
│                                                          ││     fn name(&self) -> &str;                              │
│                                                          ││     fn extensions(&self) -> &[&str];                     │
│                                                          ││ }                                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└ [All 4] Declaration 1 Imports 2 Use 1 ───────────────────┘└──────────────────────────────────────────────────────────┘
 search  Source may have changed; refresh with ctrl+r  ↓ results  ctrl+n ctrl+p files
