crates/vvv-tui/src/snapshots/vvv_tui__tests__typed_location_path.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(70, 24)"
---
┌ vvv ~/dev/nx ────────────────────────────────────── Query · search ┐
│> Language symbol:trait lang:rust kind:trait_item                   │
│ 2/2 · in: crates/very-long-package/src/语 言 /nested/modules ·       │
│symbol: trait · lang: rust · node: trait_item · category: uses ·    │
│files: lang mod                                                     │
└────────────────────────────────────────────────────────────────────┘
┌ Files ───── 0/0 of 0 · 0/0 hits ┐┌ source ─────────────────────────┐
│ no result files                 ││                                 │
├ Matches ─────────────────── 0/0 ┤│                                 │
│ ┌ look in ─────────────────────────────── 1 choice · loaded hits ┐ │
│ │> zzzz▏                                                         │ │
│ │                                                                │ │
│ │>   Use path: zzzz                                              │ │
│ └────────────────────────────────────────────────────────────────┘ │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
└All 0 Decl 0 Imp 0  [Uses 0] ────┘└─────────────────────────────────┘
 search ↑/↓ move  ⏎ choose  esc cancel  ctrl+x clear          f1 help
