crates/vvv-tui/src/snapshots/vvv_tui__tests__unified_filters.snap
---
source: crates/vvv-tui/src/tests.rs
expression: "FrameFixture::new(&m).render_size(120, 24)"
---
┌ vvv ~/dev/nx ──────────────────────────────────────────────────────────────────────────────────────── Query · search ┐
│> Language lang:rust kind:trait_item                                                                                  │
└ lang: rust · node: trait_item · category: declarations · files: mod ─────────────────────────────────────────────────┘
┌ Files ─────────────────────────────── 1/1 of 1 · 1/1 hit ┐┌ source · src/lang/mod.rs:64 ─────────────────── 13–22/70 ┐
│ files: mod                                               ││   13 │ // line 13                                        │
│> src/lang/mod.rs                                       1 ││   14 │ // line 14                                        │
├ Matches ─────────────────┌ search filters ───────────────────────────────────── 7 choices ┐                          │
│> 64  pub trait Language: │> ▏                                                             │                          │
│                          │                                                                │                          │
│                          │>   Location: workspace                                         │                          │
│                          │    Symbol kind: any                                            │                          │
│                          │    Language: rust                                              │                          │
│                          │    Node kind: trait_item                                       │                          │
│                          │    Category: declarations                                      │                          │
│                          │    File filter: mod                                            │──────────────────────────┘
│                          │    Reset all filters · keep query                              │ ────────────────── 64–67 ┐
│                          └────────────────────────────────────────────────────────────────┘ {                        │
│                                                          ││     fn name(&self) -> &str;                              │
│                                                          ││     fn extensions(&self) -> &[&str];                     │
│                                                          ││ }                                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
└All 4  [Declaration 1] Imports 2 Use 1 ───────────────────┘└──────────────────────────────────────────────────────────┘
 search ↑/↓ move  ⏎ edit  esc cancel  ctrl+x clear  ctrl+u text  ←/→ caret                                      f1 help
